--- a/index.html
+++ b/index.html
@@ -256,59 +256,84 @@
 		<div class="fh5co-project">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-md-4 text-center">
 						<div class="project-grid to-animate-2" style="      background-color: rgba(39, 43, 75,0.5);
     background-blend-mode: luminosity;background-image:  url(images/tarjeta.jpg);">
 							<div class="desc">
-								<h3><a href="http://tarjetaroja.uy/">TarjetaRoja.uy</a></h3>
-								<span>Logo</span><br>
+								<h3><a href="http://tarjetaroja.uy/" target="_blank">TarjetaRoja.uy</a></h3>
+								<span>Sitio Web</span><br>
 								<span>Portal de Noticias</span>
 								<!-- <p class="download"><a href="http://tarjetaroja.uy/"><i class="icon-download"></i></a></p>
 								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
 							</div>
 						</div>						
-						</div>
-						<div class="col-md-3 text-center">
+					</div>
+					<div class="col-md-4 text-center">
 						<div class="project-grid to-animate-2" style="      background-color: rgba(39, 43, 75,0.5);
     background-blend-mode: luminosity;background-image:  url(images/spot.jpg);">
 							<div class="desc">
-								<h3><a href="http://spotmanagement.net/">SpotManagement.net</a></h3>
-								<span>Logo</span><br>
+								<h3><a href="http://spotmanagement.net/" target="_blank">SpotManagement.net</a></h3>
+								<span>Sitio Web</span><br>
 								<span>Sitio Web</span>
 
 								<!-- <p class="download"><a href="#"><i class="icon-download"></i></a></p>
 								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
 							</div>
 						</div>						
-						</div>
-						<div class="col-md-3 text-center">
-						<div class="project-grid to-animate-2" style="background-color: rgba(39, 43, 75,0.5);
-    background-blend-mode: luminosity;background-image:  url(images/gems.jpg);">
-							<div class="desc">
-								<h3><a href="#">GemsDesign</a></h3>
-								<span>Sitio Web</span><br>
-								<span>Catálogo de productos</span>
-								<!-- <p class="download"><a href="#"><i class="icon-download"></i></a></p>
-								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
-							</div>
-						</div>						
-						</div>
-						<div class="col-md-3 text-center">
+					</div>
+					<div class="col-md-4 text-center">
 						<div class="project-grid to-animate-2" style="background-color: rgba(39, 43, 75,0.5);
     background-blend-mode: luminosity;background-image:  url(images/jms.jpg);">
 							<div class="desc">
-								<h3><a href="http://jmscopiersinc.com/">JMS Copiers Inc.</a></h3>
+								<h3><a href="http://jmscopiersinc.com/" target="_blank">JMS Copiers Inc.</a></h3>
 								<span>Sitio Web</span>
 
 								<!-- <p class="download"><a href="http://jmscopiersinc.com/"><i class="icon-download"></i></a></p>
 								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
 							</div>
-						</div>						
-						</div>						
+						</div>
 					</div>
-
 				</div>
-			</div>	
+				<div class="row">
+					<div class="col-md-4 text-center">
+						<div class="project-grid to-animate-2" style="background-color: rgba(39, 43, 75,0.5);
+    background-blend-mode: luminosity;background-image:  url(images/gems.jpg);">
+							<div class="desc">
+								<h3 class="title-site">GemsDesign (En construcci&oacute;n)</h3>
+								<span>Sitio Web</span><br>
+								<span>Catálogo de productos</span>
+								<!-- <p class="download"><a href="#"><i class="icon-download"></i></a></p>
+								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center">
+						<div class="project-grid to-animate-2" style="background-color: rgba(39, 43, 75,0.5);
+    background-blend-mode: luminosity;background-image:  url(images/bee-safety-logo.png);">
+							<div class="desc">
+								<h3 class="title-site">BeeSafety.uy (En construcci&oacute;n)</h3>
+								<span>Sitio Web</span><br>
+								<span>Servicios de prevenci&oacute;n</span>
+								<!-- <p class="download"><a href="#"><i class="icon-download"></i></a></p>
+								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center">
+						<div class="project-grid to-animate-2" style="background-color: rgba(39, 43, 75,0.5);
+    background-blend-mode: luminosity;background-image:  url(images/byguarderia-logo.png);">
+							<div class="desc">
+								<h3 class="title-site">ByGuarderia (En construcci&oacute;n)</h3>
+								<span>Sitio Web</span><br>
+								<span>Servicios</span>
+								<!-- <p class="download"><a href="#"><i class="icon-download"></i></a></p>
+								<p class="love"><a href="#"><i class="icon-heart-o"></i></a></p> -->
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 			<!-- PREGUNTAS FRECUENTES -->	
 	<section id="fh5co-faq" style="color:#cecece;background-color: #222431; background-height:110%" class="fh5co-bg-color" data-section="faq">
